prophet implementation added

--- a/notebooks/dnn-results-comparison.ipynb
+++ b/notebooks/dnn-results-comparison.ipynb
@@ -10027,7 +10027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10036,7 +10036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -10049,7 +10049,7 @@
        " 1.079391787981906]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10060,7 +10060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10069,20 +10069,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.0836911216924023,\n",
-       " 1.068972959132668,\n",
-       " 1.0481293634063162,\n",
-       " 0.9706266991937544,\n",
-       " 1.0284476455987281]"
+       "[1.0542174171354008,\n",
+       " 1.0232683119331432,\n",
+       " 1.0241570683528618,\n",
+       " 0.9293869144235187,\n",
+       " 1.0084912706608262]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10093,7 +10093,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_error_tbats, grid_error_dist_tbats = mase_grid('benchmark_results/tbats')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.8748277728587743,\n",
+       " 1.749112915806915,\n",
+       " 1.7063914310919486,\n",
+       " 1.5437416506766883,\n",
+       " 1.683218533714505]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_error_tbats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10102,7 +10135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -10115,7 +10148,7 @@
        " 1.0130934871185597]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10126,7 +10159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10135,7 +10168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -10148,7 +10181,7 @@
        " 1.2526500181919522]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10159,7 +10192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10168,16 +10201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8513174356957707"
+       "1.8748277728587743"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10188,31 +10221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.468234482294422,\n",
-       " 1.416183866343975,\n",
-       " 1.330124385681185,\n",
-       " 1.123227003082377,\n",
-       " 1.0130934871185597,\n",
-       " 4.291811358893434,\n",
-       " 4.284694639389833,\n",
-       " 4.287845852587354,\n",
-       " 1.2286401937003335,\n",
-       " 1.2526500181919522,\n",
-       " 1.0836911216924023,\n",
-       " 1.068972959132668,\n",
-       " 1.0481293634063162,\n",
-       " 0.9706266991937544,\n",
-       " 1.0284476455987281,\n",
-       " 1.079391787981906]"
+       "21"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10222,13 +10240,14 @@
     "grid_results = grid_error\n",
     "grid_results.extend(grid_error_tcn)\n",
     "grid_results.extend(grid_error_arima)\n",
+    "grid_results.extend(grid_error_tbats)\n",
     "grid_results.extend([grid_error_naive[0]])\n",
-    "grid_results"
+    "len(grid_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10236,14 +10255,16 @@
     "                'LSTM - Site aggregated', 'CNN - Grid', 'CNN - TL aggregated', 'CNN - SUB aggregated', \n",
     "                'CNN - PC aggregated', 'CNN - Site aggregated', 'AutoARIMA - Grid', 'AutoARIMA - TL aggregated', \n",
     "                'AutoARIMA - SUB aggregated', \n",
-    "                'AutoARIMA - PC aggregated', 'AutoARIMA - Site aggregated', 'Seasonal Naive']\n",
+    "                'AutoARIMA - PC aggregated', 'AutoARIMA - Site aggregated', 'TBATS - Grid', \n",
+    "                'TBATS - TL aggregated', 'TBATS - SUB aggregated', \n",
+    "                'TBATS - PC aggregated', 'TBATS - Site aggregated','Seasonal Naive']\n",
     "\n",
     "grid_level_fc_accuracy = pd.DataFrame(grid_results, index = column_names, columns = ['Grid Forecasts mean MASE'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10254,87 +10275,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "#T_72f59_row4_col0,#T_72f59_row13_col0,#T_72f59_row14_col0{\n",
+       "#T_df027_row4_col0,#T_df027_row13_col0,#T_df027_row14_col0{\n",
        "            background-color:  lightgreen;\n",
-       "        }</style><table id=\"T_72f59_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Grid Forecasts mean MASE</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_df027_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Grid Forecasts mean MASE</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_72f59_level0_row0\" class=\"row_heading level0 row0\" >LSTM - Grid</th>\n",
-       "                        <td id=\"T_72f59_row0_col0\" class=\"data row0 col0\" >1.468234</td>\n",
+       "                        <th id=\"T_df027_level0_row0\" class=\"row_heading level0 row0\" >LSTM - Grid</th>\n",
+       "                        <td id=\"T_df027_row0_col0\" class=\"data row0 col0\" >1.468234</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row1\" class=\"row_heading level0 row1\" >LSTM - TL aggregated</th>\n",
-       "                        <td id=\"T_72f59_row1_col0\" class=\"data row1 col0\" >1.416184</td>\n",
+       "                        <th id=\"T_df027_level0_row1\" class=\"row_heading level0 row1\" >LSTM - TL aggregated</th>\n",
+       "                        <td id=\"T_df027_row1_col0\" class=\"data row1 col0\" >1.416184</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row2\" class=\"row_heading level0 row2\" >LSTM - SUB aggregated</th>\n",
-       "                        <td id=\"T_72f59_row2_col0\" class=\"data row2 col0\" >1.330124</td>\n",
+       "                        <th id=\"T_df027_level0_row2\" class=\"row_heading level0 row2\" >LSTM - SUB aggregated</th>\n",
+       "                        <td id=\"T_df027_row2_col0\" class=\"data row2 col0\" >1.330124</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row3\" class=\"row_heading level0 row3\" >LSTM - PC aggregated</th>\n",
-       "                        <td id=\"T_72f59_row3_col0\" class=\"data row3 col0\" >1.123227</td>\n",
+       "                        <th id=\"T_df027_level0_row3\" class=\"row_heading level0 row3\" >LSTM - PC aggregated</th>\n",
+       "                        <td id=\"T_df027_row3_col0\" class=\"data row3 col0\" >1.123227</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row4\" class=\"row_heading level0 row4\" >LSTM - Site aggregated</th>\n",
-       "                        <td id=\"T_72f59_row4_col0\" class=\"data row4 col0\" >1.013093</td>\n",
+       "                        <th id=\"T_df027_level0_row4\" class=\"row_heading level0 row4\" >LSTM - Site aggregated</th>\n",
+       "                        <td id=\"T_df027_row4_col0\" class=\"data row4 col0\" >1.013093</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row5\" class=\"row_heading level0 row5\" >CNN - Grid</th>\n",
-       "                        <td id=\"T_72f59_row5_col0\" class=\"data row5 col0\" >4.291811</td>\n",
+       "                        <th id=\"T_df027_level0_row5\" class=\"row_heading level0 row5\" >CNN - Grid</th>\n",
+       "                        <td id=\"T_df027_row5_col0\" class=\"data row5 col0\" >4.291811</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row6\" class=\"row_heading level0 row6\" >CNN - TL aggregated</th>\n",
-       "                        <td id=\"T_72f59_row6_col0\" class=\"data row6 col0\" >4.284695</td>\n",
+       "                        <th id=\"T_df027_level0_row6\" class=\"row_heading level0 row6\" >CNN - TL aggregated</th>\n",
+       "                        <td id=\"T_df027_row6_col0\" class=\"data row6 col0\" >4.284695</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row7\" class=\"row_heading level0 row7\" >CNN - SUB aggregated</th>\n",
-       "                        <td id=\"T_72f59_row7_col0\" class=\"data row7 col0\" >4.287846</td>\n",
+       "                        <th id=\"T_df027_level0_row7\" class=\"row_heading level0 row7\" >CNN - SUB aggregated</th>\n",
+       "                        <td id=\"T_df027_row7_col0\" class=\"data row7 col0\" >4.287846</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row8\" class=\"row_heading level0 row8\" >CNN - PC aggregated</th>\n",
-       "                        <td id=\"T_72f59_row8_col0\" class=\"data row8 col0\" >1.228640</td>\n",
+       "                        <th id=\"T_df027_level0_row8\" class=\"row_heading level0 row8\" >CNN - PC aggregated</th>\n",
+       "                        <td id=\"T_df027_row8_col0\" class=\"data row8 col0\" >1.228640</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row9\" class=\"row_heading level0 row9\" >CNN - Site aggregated</th>\n",
-       "                        <td id=\"T_72f59_row9_col0\" class=\"data row9 col0\" >1.252650</td>\n",
+       "                        <th id=\"T_df027_level0_row9\" class=\"row_heading level0 row9\" >CNN - Site aggregated</th>\n",
+       "                        <td id=\"T_df027_row9_col0\" class=\"data row9 col0\" >1.252650</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row10\" class=\"row_heading level0 row10\" >AutoARIMA - Grid</th>\n",
-       "                        <td id=\"T_72f59_row10_col0\" class=\"data row10 col0\" >1.083691</td>\n",
+       "                        <th id=\"T_df027_level0_row10\" class=\"row_heading level0 row10\" >AutoARIMA - Grid</th>\n",
+       "                        <td id=\"T_df027_row10_col0\" class=\"data row10 col0\" >1.054217</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row11\" class=\"row_heading level0 row11\" >AutoARIMA - TL aggregated</th>\n",
-       "                        <td id=\"T_72f59_row11_col0\" class=\"data row11 col0\" >1.068973</td>\n",
+       "                        <th id=\"T_df027_level0_row11\" class=\"row_heading level0 row11\" >AutoARIMA - TL aggregated</th>\n",
+       "                        <td id=\"T_df027_row11_col0\" class=\"data row11 col0\" >1.023268</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row12\" class=\"row_heading level0 row12\" >AutoARIMA - SUB aggregated</th>\n",
-       "                        <td id=\"T_72f59_row12_col0\" class=\"data row12 col0\" >1.048129</td>\n",
+       "                        <th id=\"T_df027_level0_row12\" class=\"row_heading level0 row12\" >AutoARIMA - SUB aggregated</th>\n",
+       "                        <td id=\"T_df027_row12_col0\" class=\"data row12 col0\" >1.024157</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row13\" class=\"row_heading level0 row13\" >AutoARIMA - PC aggregated</th>\n",
-       "                        <td id=\"T_72f59_row13_col0\" class=\"data row13 col0\" >0.970627</td>\n",
+       "                        <th id=\"T_df027_level0_row13\" class=\"row_heading level0 row13\" >AutoARIMA - PC aggregated</th>\n",
+       "                        <td id=\"T_df027_row13_col0\" class=\"data row13 col0\" >0.929387</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row14\" class=\"row_heading level0 row14\" >AutoARIMA - Site aggregated</th>\n",
-       "                        <td id=\"T_72f59_row14_col0\" class=\"data row14 col0\" >1.028448</td>\n",
+       "                        <th id=\"T_df027_level0_row14\" class=\"row_heading level0 row14\" >AutoARIMA - Site aggregated</th>\n",
+       "                        <td id=\"T_df027_row14_col0\" class=\"data row14 col0\" >1.008491</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_72f59_level0_row15\" class=\"row_heading level0 row15\" >Seasonal Naive</th>\n",
-       "                        <td id=\"T_72f59_row15_col0\" class=\"data row15 col0\" >1.079392</td>\n",
+       "                        <th id=\"T_df027_level0_row15\" class=\"row_heading level0 row15\" >TBATS - Grid</th>\n",
+       "                        <td id=\"T_df027_row15_col0\" class=\"data row15 col0\" >1.874828</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_df027_level0_row16\" class=\"row_heading level0 row16\" >TBATS - TL aggregated</th>\n",
+       "                        <td id=\"T_df027_row16_col0\" class=\"data row16 col0\" >1.749113</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_df027_level0_row17\" class=\"row_heading level0 row17\" >TBATS - SUB aggregated</th>\n",
+       "                        <td id=\"T_df027_row17_col0\" class=\"data row17 col0\" >1.706391</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_df027_level0_row18\" class=\"row_heading level0 row18\" >TBATS - PC aggregated</th>\n",
+       "                        <td id=\"T_df027_row18_col0\" class=\"data row18 col0\" >1.543742</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_df027_level0_row19\" class=\"row_heading level0 row19\" >TBATS - Site aggregated</th>\n",
+       "                        <td id=\"T_df027_row19_col0\" class=\"data row19 col0\" >1.683219</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_df027_level0_row20\" class=\"row_heading level0 row20\" >Seasonal Naive</th>\n",
+       "                        <td id=\"T_df027_row20_col0\" class=\"data row20 col0\" >1.079392</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x12c7e7490>"
+       "<pandas.io.formats.style.Styler at 0x12ccfbfd0>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
