--- a/notebooks/dnn-results-comparison.ipynb
+++ b/notebooks/dnn-results-comparison.ipynb
@@ -7489,7 +7489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7504,7 +7504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7536,7 +7536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7567,7 +7567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7576,7 +7576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7589,7 +7589,7 @@
        " 1.079391787981905]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7600,7 +7600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7609,7 +7609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7622,7 +7622,7 @@
        " 0.39650412384284306]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7633,7 +7633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7642,7 +7642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -7655,7 +7655,7 @@
        " 1.0084912706608253]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7666,7 +7666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7675,7 +7675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -7688,7 +7688,7 @@
        " 0.3358448691063564]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7699,7 +7699,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7443561393233701"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_error_dist_arima_rmse['grid'][14]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8806265803815145"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_error_dist_tbats_rmse['grid'][14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7708,7 +7748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -7721,7 +7761,7 @@
        " 1.683218533714503]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7732,7 +7772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7741,7 +7781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -7754,7 +7794,7 @@
        " 0.512242338766708]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7992,11 +8032,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "grid_error_tcn_rmse, grid_error_dist_tcn_rmse = mase_grid('cnn_results/tcn_new/dilation_2', \"RMSE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.377380092919877,\n",
+       " 0.38148387426162045,\n",
+       " 0.38206648791517106,\n",
+       " 0.39047288944725306,\n",
+       " 0.37784276340728884]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_error_tcn_rmse"
    ]
   },
   {
