pretraining model's changed

--- a/notebooks/visualise-conv-features.ipynb
+++ b/notebooks/visualise-conv-features.ipynb
@@ -66,6 +66,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "fca70eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pc_model = tf.keras.models.load_model(\n",
+    "        '../combined_nn_results/refined_models/pre_trained_models/CNN/all_pc/saved_models/postcode_level_branch_approachA/0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3140b5da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pc_model.name= 'pCMO'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e309d8f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"functional_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_postcode_6010 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_postcode_6014 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_postcode_6011 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_postcode_6280 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_postcode_6281 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_postcode_6284 (InputLayer [(None, 14, 14)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "postcode_concat (Concatenate)   (None, 14, 84)       0           input_postcode_6010[0][0]        \n",
+      "                                                                 input_postcode_6014[0][0]        \n",
+      "                                                                 input_postcode_6011[0][0]        \n",
+      "                                                                 input_postcode_6280[0][0]        \n",
+      "                                                                 input_postcode_6281[0][0]        \n",
+      "                                                                 input_postcode_6284[0][0]        \n",
+      "__________________________________________________________________________________________________\n",
+      "postcode_concat_normalize (Laye (None, 14, 84)       168         postcode_concat[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_cnn_layer1 (Conv1D)      (None, 14, 32)       5408        postcode_concat_normalize[0][0]  \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_cnn_layer2 (Conv1D)      (None, 14, 32)       2080        pc_all_cnn_layer1[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_max_pool_1 (MaxPooling1D (None, 7, 32)        0           pc_all_cnn_layer2[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_cnn_layer3 (Conv1D)      (None, 7, 32)        2080        pc_all_max_pool_1[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_cnn_layer4 (Conv1D)      (None, 7, 32)        2080        pc_all_cnn_layer3[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "pc_all_max_pool_2 (MaxPooling1D (None, 4, 32)        0           pc_all_cnn_layer4[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_pc_all (Flatten)        (None, 128)          0           pc_all_max_pool_2[0][0]          \n",
+      "__________________________________________________________________________________________________\n",
+      "prediction_layer_pc_all (Dense) (None, 14)           1806        flatten_pc_all[0][0]             \n",
+      "==================================================================================================\n",
+      "Total params: 13,622\n",
+      "Trainable params: 13,622\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "pc_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "metropolitan-county",
    "metadata": {},
@@ -154,12 +245,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "white-homeless",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.load_model('../combined_nn_results/refined_models/saved_models/model9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7e569fcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model('../combined_nn_results/refined_models/saved_models/model9')"
+    "import src.CNN_architectures.temporal_conv as tcn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8e994a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tcn.TCN.get_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1ad03ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model2 = tf.keras.models.load_model('../combined_nn_results/refined_models/pre_trained_models/grid/saved_models/grid_level_branch/0', custom_objects={\"TCN_grid\":tcn.TCN})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d7efbae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model2 = tf.keras.models.load_model('../combined_nn_results/refined_models/pre_trained_models/all_pc/saved_models/postcode_level_branch_approachA/0')"
    ]
   },
   {
@@ -4379,7 +4518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
